--- a/Larry Portfolio Website/assets/css/styles.css
+++ b/Larry Portfolio Website/assets/css/styles.css
@@ -305,7 +305,7 @@ img {
   transition: 0.3s;
 }
 
-.home__scroll-button {
+.home__scroll-button:hover {
   transform: translateY(0.25rem);
 }
 
@@ -324,6 +324,29 @@ img {
   font-size: 1.25rem;
 }
 /*==================== BUTTONS ====================*/
+.button {
+  display: inline-block;
+  background: var(--first-color);
+  color: #fff;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  font-weight: var(--font-medium);
+}
+
+.button:hover {
+  background-color: var(--first-color-alt);
+}
+
+.button__icon {
+  font-size: 1.25rem;
+  margin-left: var(--mb-0-5);
+  transition: 0.3s;
+}
+
+.button--flex {
+  display: inline-flex;
+  align-items: center;
+}
 
 /*==================== ABOUT ====================*/
 
