--- a/Larry Portfolio Website/assets/css/styles.css
+++ b/Larry Portfolio Website/assets/css/styles.css
@@ -349,6 +349,23 @@ img {
 }
 
 /*==================== ABOUT ====================*/
+.about__img {
+  width: 200px;
+  border-radius: 0.5rem;
+  justify-self: center;
+  align-self: center;
+  background-color: var(--first-color);
+}
+
+.about__description {
+  text-align: center;
+  margin-bottom: var(--mb-2-5);
+}
+
+.about__buttons {
+  display: flex;
+  justify-content: center;
+}
 
 /*==================== SKILLS ====================*/
 
