--- a/Larry Portfolio Website/assets/css/styles.css
+++ b/Larry Portfolio Website/assets/css/styles.css
@@ -376,6 +376,110 @@ img {
 }
 
 /*==================== SKILLS ====================*/
+.skills__container {
+  row-gap: 0;
+}
+
+.skills__header {
+  display: flex;
+  align-items: center;
+  margin-bottom: var(--mb-2-5);
+  cursor: pointer;
+}
+
+.skills__icon,
+.skills__arrow {
+  font-size: 2rem;
+  color: var(--first-color);
+}
+
+.skills__icon {
+  margin-right: var(--mb-0-75);
+}
+
+.skills__title {
+  font-size: var(--h3-font-size);
+}
+
+.skills__arrow {
+  margin-left: auto;
+  transition: 0.4s;
+}
+
+.skills__list {
+  row-gap: 1.5rem;
+  padding-left: 2.7rem;
+}
+
+.skills__titles {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: var(--mb-0-5);
+}
+
+.skills__name {
+  font-size: var(--normal-font-size);
+  font-weight: var(--font-medium);
+}
+
+.skills__bar,
+.skills__percentage {
+  height: 5px;
+  border-radius: 0.25rem;
+}
+
+.skills__bar {
+  background-color: var(--first-color-lighter);
+}
+
+.skills__percentage {
+  display: block;
+  background-color: var(--first-color);
+}
+
+.skills__html {
+  width: 80%;
+}
+
+.skills__css {
+  width: 70%;
+}
+
+.skills__js {
+  width: 75%;
+}
+
+.skills__python {
+  width: 85%;
+}
+
+.skills__aws {
+  width: 80%;
+}
+
+.skills__expressjs {
+  width: 70%;
+}
+
+.skills__close .skills__list {
+  height: 0;
+  overflow: hidden;
+}
+
+.skills__open .skills__list {
+  height: max-content;
+  margin-bottom: var(--mb-2-5);
+}
+
+.skills__open .skills__arrow {
+  transform: rotate(-180deg);
+}
+
+.language__icons {
+  width: 0px; /* Adjust the width to your desired size */
+  height: 24px; /* Adjust the height to your desired size */
+  margin-right: 10px; /* Add margin to create spacing between the icon and text */
+}
 
 /*==================== QUALIFICATION ====================*/
 
