--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,8 +6,7 @@
   --header-height: 3rem;
 
   /*========== Colors ==========*/
-  /* Change favorite color */
-  --hue-color: 215; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
+  --hue-color: 215;
 
   /* HSL color mode */
   --first-color: hsl(var(--hue-color), 69%, 61%);
@@ -25,8 +24,6 @@
 
   /*========== Font and typography ==========*/
   --body-font: "Poppins", sans-serif;
-
-  /* .5rem = 8px, 1rem = 16px, 1.5rem = 24px ... */
   --big-font-size: 2rem;
   --h1-font-size: 1.5rem;
   --h2-font-size: 1.25rem;
@@ -40,7 +37,6 @@
   --font-semi-bold: 600;
 
   /*========== Margenes Bottom ==========*/
-  /* .25rem = 4px, .5rem = 8px, .75rem = 12px ... */
   --mb-0-25: 0.25rem;
   --mb-0-5: 0.5rem;
   --mb-0-75: 0.75rem;
@@ -331,6 +327,7 @@ img {
 .home__scroll-arrow {
   font-size: 1.25rem;
 }
+
 /*==================== BUTTONS ====================*/
 .button {
   display: inline-block;
@@ -339,6 +336,7 @@ img {
   padding: 1rem;
   border-radius: 0.5rem;
   font-weight: var(--font-medium);
+  border: none;
 }
 
 .button:hover {
@@ -479,7 +477,7 @@ img {
   transform: rotate(-180deg);
 }
 
-/*==================== QUALIFICATION ====================*/
+/*==================== QUALIFICATION/TIMELINE ====================*/
 .qualification__tabs {
   display: flex;
   justify-content: space-evenly;
@@ -553,7 +551,7 @@ img {
 
 /* Active Modal */
 
-/*==================== PORTFOLIO ====================*/
+/*==================== PORTFOLIO/PROJECTS ====================*/
 .portfolio__container {
   overflow: initial;
 }
@@ -612,11 +610,64 @@ img {
 .swiper-pagination-bullet {
   outline: none;
 }
-/*==================== PROJECT IN MIND ====================*/
-
-/*==================== TESTIMONIAL ====================*/
 
 /*==================== CONTACT ME ====================*/
+.contact__container {
+  row-gap: 3rem;
+}
+
+.contact__information {
+  display: flex;
+  margin-bottom: var(--mb-2);
+}
+
+.contact__icon {
+  font-size: 2rem;
+  color: var(--first-color);
+  margin-right: var(--mb-0-75);
+}
+
+.contact__title {
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-medium);
+}
+
+.contact__subtitle {
+  font-size: var(--small-font-size);
+  color: var(--text-color-light);
+}
+
+.contact__content {
+  background-color: var(--input-color);
+  border-radius: 0.5rem;
+  padding: 0.75rem 1rem 0.25rem;
+}
+
+.contact__label {
+  font-size: var(--smaller-font-size);
+  color: var(--title-color);
+}
+
+.contact__input {
+  width: 100%;
+  background-color: var(--input-color);
+  color: var(--text-color);
+  font-family: var(--body-font);
+  font-size: var(--normal-font-size);
+  border: none;
+  outline: none;
+  padding: 0.25rem 0.5rem 0.5rem 0;
+}
+
+.nochange:link,
+.nochange:visited {
+  color: var(--text-color-light);
+  text-decoration: none;
+}
+
+.nochange:hover {
+  color: var(--text-color-light);
+}
 
 /*==================== FOOTER ====================*/
 
