--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -350,6 +350,11 @@ img {
   font-size: 1.25rem;
 }
 
+/*========== Visits Counter ==========*/
+.visit__counter {
+  margin-top: var(--mb-0-5);
+}
+
 /*==================== BUTTONS ====================*/
 .button {
   display: inline-block;
